--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,10 @@ table {
     border-spacing: 0;
 }
 
+body{
+  background-color: var(--bg-color);
+  transition: background-color 0.3s linear;
+}
 
 
 
