--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 /* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
+  v2.0 | 20110126
+  License: none (public domain)
 */
 
 html, body, div, span, applet, object, iframe,
@@ -74,7 +74,7 @@ body{
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 950px;
   background-color: #D9B08C;
   background-size: cover; /* Масштабирование фона */
   z-index: -1; /* Помещаем фон за содержимым */
