--- a/css/about.css
+++ b/css/about.css
@@ -29,10 +29,11 @@
   display: flex;
   width: 100%;
   height: 600px;
+  margin-left: 50px;
 }
 
 .right_block_about img {
-  width: 380px;
+  width: 700px;
   border-radius: 30px;
   height: 470px;
 
@@ -43,9 +44,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
+  
 }
-
+.left_block_about{
+  margin-left: 50px;
+}
 
 .about_data {
 
