--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,7 @@ table {
 body{
   background-color: var(--bg-color);
   transition: background-color 0.3s linear;
+  cursor: url('/img/cusor.png'), auto;
 }
 
 
