--- a/css/skills.css
+++ b/css/skills.css
@@ -1,6 +1,6 @@
 .skills {
   width: 100%;
-  height: 700px;
+  height: 500px;
   display: block;
   margin: 60px 0 0;
   border-radius: 25px;
@@ -20,6 +20,7 @@
   grid-template-columns: repeat(auto-fit, minmax(20px, 0.350fr));
   gap: 2px; /* минимальное расстояние между карточками */
   justify-content: center;
+  margin-left: 50px;
 }
 
 
