--- a/css/about.css
+++ b/css/about.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 700px;
   display: block;
-  background-color: #D1E8E2;
+  background-color: #87be2e;
   margin: 60px 0 0;
   border-radius: 25px;
 }
@@ -66,8 +66,7 @@
   text-align: center;
   flex-direction: column;
   border-radius: 15px;
-  border: solid 1px #000000;
-  background-color: #116466;
+  background-color: #1a362d;
   color: white;
   transition: 0.3s;
 
