--- a/css/header.css
+++ b/css/header.css
@@ -45,12 +45,12 @@
   align-items: center;
   justify-content: center;
   font-size: 20px;
-  color: rgb(0, 0, 0);
+  color: white;
 }
 
 .text_line:before,
 .text_line:after {
-  background: rgb(0, 0, 0);
+  background: white;
   height: 2px;
   flex: 1;
   content: '';
@@ -61,7 +61,7 @@
   font-size: 18px;
   margin-top: 40px;
   text-align: center;
-  color: #2C3531;
+  color: #8B8D98;
   ;
 }
 
@@ -109,6 +109,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
+  color: rgb(15, 8, 54);
 }
 
 .custom-button::before,
@@ -127,11 +128,13 @@
   top: 0;
   left: 54px;
   width: calc(100% - 56px * 2 - 16px);
+  background-color: #116466;
 }
 
 .custom-button::after {
   top: 0;
   right: 54px;
+  background-color: #116466;
   width: 8px;
 }
 
@@ -139,12 +142,14 @@
   bottom: 0;
   right: 54px;
   width: calc(100% - 56px * 2 - 16px);
+  background-color: #116466;
 }
 
 .custom-button__text::after {
   bottom: 0;
   left: 54px;
   width: 8px;
+  background-color: #116466;
 }
 
 .custom-button__line {
@@ -162,6 +167,7 @@
   width: 150%;
   height: 100%;
   box-sizing: border-box;
+  
   border-radius: 300px;
   border: solid 3px var(--line_color);
 }
