--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
     line-height: 1;
+    
 }
 ol, ul {
     list-style: none;
@@ -76,11 +77,13 @@ body{
   left: 0;
   width: 100%;
   height: 950px;
-  background-color: #D9B08C;
+  background-color: #1a362d;
   background-size: cover; /* Масштабирование фона */
   z-index: -1; /* Помещаем фон за содержимым */
 }
-
+body {
+  background: #1a362d;
+}
 
 /* Ночная тема */
 body.dark-mode {
@@ -96,6 +99,27 @@ body.dark-mode {
 }
 
 
-.test{
-  height: 1000px;
+
+#scrollToTopBtn {
+  display: none; /* Скрыто по умолчанию */
+  position: fixed; 
+  bottom: 20px; 
+  right: 30px; 
+  z-index: 99; 
+  font-size: 18px; 
+  border: none; 
+  outline: none; 
+  background-color: #000; 
+  color: white; 
+  cursor: pointer; 
+  padding: 15px; 
+  border-radius: 10px;
 }
+
+#scrollToTopBtn:hover {
+  background-color: #555; 
+}
+html {
+  scroll-behavior: smooth;
+}
+
