--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,6 +1,6 @@
 .navbar{
   margin: 30px 0;
-  background-color: #D1E8E2;
+  background-color: #87be2e;
   height: 94px;
   width: 100%;
   border-radius: 20px;
